--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: 
-      name: ci_cd
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -24,3 +21,31 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: flask_app_sample
+        IMAGE_TAG: latest
+      working-directory: app
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.0.0
+    - name: Terraform Init
+      working-directory: tf
+      run: terraform init
+
+    - name: Terraform Plan
+      working-directory: tf
+      run: terraform plan
+
+    - name: Terraform Apply
+      working-directory: tf
+      run: terraform apply -auto-approve
+    - name: Terraform Destroy
+      if: failure()
+      run: terraform destroy -auto-approve
